update index fr

--- a/fr/index.html
+++ b/fr/index.html
@@ -32,26 +32,8 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="programme.html">Programme</a>
-            </li> <!-- 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/en/program.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Program</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <ul class="list-inline">  
-                    <li class="list-inline-item"><a class="" href="#">Day 1</a></li>
-                    <li class="list-inline-item"><a class="" href="#">Day 2</a></li>
-                    <li class="list-inline-item"><a class="" href="#">Day 3</a></li>
-                 </ul>
-              </ul>
-            </li>-->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venir</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="venir.html">Information</a>
-                    <a class="dropdown-item" href="venir.html#enregistrement">Enregistrement</a>
-                    <a class="dropdown-item" href="venir.html#hebergement">Hébergement</a>
-                    <a class="dropdown-item" href="venir.html#voyage">Voyage</a>
-             </div>
-              </li>
+            </li> 
+           
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Éditions</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -102,10 +84,7 @@
                            <div class="col-12">
                             <h1 class="card-title text-center">Le Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow"><strike>26-29 Mai à Rennes, France</strike></h2>
-                            <h2 class="text-center h1 shadow">27-29 Mai, en ligne</h2>
-                        <p class="card-text text-center mt-4 mb-4">
-                            <a href="#information" class="btn btn-cor4 btn-lg">Informations importantes</a>
-                        </p>
+                            <h2 class="text-center h1 shadow">27-29 Mai, en ligne</h2>                       
                      </div>
                     <div class="col-md-4 col-sm-12">
                       <p class="text-center"><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt=""></p>
@@ -120,104 +99,30 @@
            </div><!-- card-->
          </header>
 
-          <section class="cor2">
+          <section class="cor1">
               <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div id="information" class="text-center importantinfo">
-                        <h2 class="text-center h2">Informations importantes</h2>
-                        <p class="text-center importantinfo">
-                            Avec la situation de pandémie actuelle et les restrictions de voyage, nous avons finalement décidé de reporter le Libre Graphics Meeting à Rennes en 2021.<br/><br/>
-                            Pour cette année nous organisons l'événement en ligne. Les présentations et ateliers seront diffusés en ligne du 27 au 29 Mai.<br/>
-                            Le programme sera annoncé bientôt, merci de rester à l'écoute.<br/><br/>
-                        </p>
+                        <div id="information" class="text-center">
+                        <h2 class="text-center h2">Participez</h2>
+                        <p class="mt-4">Avec la situation de pandémie actuelle et les restrictions de voyage, nous avons finalement 
+                          décidé de reporter le Libre Graphics Meeting à Rennes en 2021.</p>
+                        <p>Pour cette année nous organisons l'événement en ligne. Les présentations et ateliers seront diffusés en
+                          ligne du 27 au 29 Mai.</p>
+                        <p>Le <a href="program.html" class="btn btn-cor4 btn-lg">programme </a>est disponible, lisez <a href="live.html" class="btn btn-cor4 btn-lg"> cette page </a>
+                          pour savoir comment rejoindre l'événement.</p>
                         </div>
-                        <br/>
-                        <h2 class="text-center">Participez à cette édition !</h2>
-                        <p class="mt-4">Les Libre Graphics Meeting (LGM) est une rencontre annuelle et nomade pour et par la communauté active dans le logiciel libre graphique. La première rencontre a commencé en mars 2006.</p>
-                    </div><!-- /col12-->
-
                     <div class="col-md-4">
-                        <p class="text-center"><img src="../css/img/icone01.png" width="130" alt=""></p>
-                        <p class="h3 text-center">Rejoignez le meeting</p>
+                        <p class="text-center"><img src="../css/img/icone01.png" width="130" alt=""></p>                      
                     </div><!-- /col4-->
                     <div class="col-md-4">
-                        <p class="text-center"><img src="../css/img/icone02.png" width="130" alt=""></p>
-                        <p class="h3 text-center">Venez à nos Workshop</p>
+                        <p class="text-center"><img src="../css/img/icone02.png" width="130" alt=""></p>                      
                     </div><!-- /col4-->
                     <div class="col-md-4">
-                        <p class="text-center"><img src="../css/img/icone03.png" width="130" alt=""></p>
-                        <p class="h3 text-center">Rencontrez-nous joyeusement</p>
+                        <p class="text-center"><img src="../css/img/icone03.png" width="130" alt=""></p>                      
                     </div><!-- /col4-->
-
-                    <div class="col-12">
-                        <p class="text-center mt-4"><a href="../en/register.html" class="btn btn-cor3">M'enregistrer !</a></p>
-                    </div>
                 </div><!-- /row-->
                    </div>
-            </div><!-- /container-->
-          </section>
-
-          <section class="cor1">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="text-center">Lieu</h2>
-                        <div class="row">
-                          <div class="col-sm-6">
-                        <p class="text-center"><img src="../css/img/Livio-Fania-image01.png" alt="" class="img-fluid"></p>
-                      <p>by Livio Fania</p></div>
-                        <div class="col-sm-6">
-                        <p class="text-center"><img src="../css/img/Livio-Fania-image02.png" alt="" class="img-fluid"></p>
-                      </div>
-                    </div>
-                        <p class="mt-4"> LGM 2020 sera présent sur plusieurs lieux dans la ville de Rennes. Il y aura des conférences, des ateliers et d'autres formats de rencontre.</p>
-                    </div><!-- /col12-->
-
-                    <div class="col-md-4 mb-4">
-                        <div class="box1">
-                            <h3 class="mt-2">ISTIC, University Rennes 1</h3>
-                            <p class="text-white mt-4">
-                                <span class="bubble">26 Mai</span>
-                                <span class="bubble">27 Mai</span>
-                            </p>
-                            <h4>Adresse</h4>
-                            <p>263, avenue du Général Leclerc<br>
-                            Rennes</p>
-                        </div>
-                    </div><!-- /col4-->
-
-                    <div class="col-md-4 mb-4">
-                        <div class="box1">
-                            <h3 class="mt-2">Jardin Moderne</h3>
-                            <p class="text-white mt-4">
-                                <span class="bubble">28 Mai</span>
-                                <span class="bubble">29 Mai</span>
-                            </p>
-                            <h4>Adresse</h4>
-                            <p>11, rue du Manoir de Servigné<br>
-                              Rennes</p>
-                        </div>
-                    </div><!-- /col4-->
-
-                    <div class="col-md-4 mb-4">
-                        <div class="box1">
-                            <h3 class="mt-2">Activdesign</h3>
-                            <p class="text-white mt-4">
-                                <span class="bubble">28 Mai</span>
-                                <span class="bubble">29 Mai</span>
-                            </p>
-                            <h4>Adresse</h4>
-                            <p>11, bis rue Jean le Hô<br>
-                              Rennes</p>
-                        </div>
-                    </div><!-- /col4-->
-
-                    <div class="col-12">
-                        <p class="text-center mt-4"><a href="venir.html" class="btn btn-cor5">En savoir +</a></p>
-                    </div>
-
-                </div><!-- /row -->
             </div><!-- /container-->
           </section>
 
