--- a/fr/index.html
+++ b/fr/index.html
@@ -109,9 +109,10 @@
                           décidé de reporter le Libre Graphics Meeting à Rennes en 2021.</p>
                         <p>Pour cette année nous organisons l'événement en ligne. Les présentations et ateliers seront diffusés en
                           ligne du 27 au 29 Mai.</p>
-                        <p>Le <a href="program.html" class="btn btn-cor4 btn-lg">programme </a>est disponible, lisez <a href="live.html" class="btn btn-cor4 btn-lg"> cette page </a>
+                        <p>Le <a href="/en/program.html" class="btn btn-cor4 btn-lg">programme </a>est disponible, lisez <a href="../en/live.html" class="btn btn-cor4 btn-lg"> cette page </a>
                           pour savoir comment rejoindre l'événement.</p>
                         </div>
+                  </div>
                     <div class="col-md-4">
                         <p class="text-center"><img src="../css/img/icone01.png" width="130" alt=""></p>                      
                     </div><!-- /col4-->
