--- a/en/live.html
+++ b/en/live.html
@@ -86,6 +86,7 @@
                     </div><!-- /row-->
                                             <!-- video player-->
                     <video width="640" height="360" controls style="margin: auto">
+                       poster="../css/img/poster-stream.png" >
                         <source src="http://ice.wintermute.org:8000/lgm.webm" type="video/webm">
                         Your browser does not support the video tag.
                     </video>
