--- a/en/live.html
+++ b/en/live.html
@@ -85,8 +85,8 @@
                          <p class="mt-4">For workshops, please join the IRC channel #lgm-workshop if you want to participate.</p>
                     </div><!-- /row-->
                                             <!-- video player-->
-                    <video width="640" height="360" controls style="margin: auto">
-                       poster="../css/img/poster-stream.png" >
+                    <video width="640" height="360" controls style="margin: auto"  poster="../css/img/poster-stream.png">
+                      
                         <source src="http://ice.wintermute.org:8000/lgm.webm" type="video/webm">
                         Your browser does not support the video tag.
                     </video>
