update program en

--- a/en/program.html
+++ b/en/program.html
@@ -135,9 +135,13 @@
       </td>
     <td>
         <h5>PRESENTATION</h5>  
-        <h3 class="mt-4 mb-4">Inkscape </h3>
-        <h3>Marc Jeanmougin</h3>
-       <p>All about our favorite software...</p> 
+        <h3 class="mt-4 mb-4">Inkscape 1.0 </h3>
+        <h3>Marc Jeanmougin, Martin Owens</h3>
+       <p>Inkscape, the well-known vector graphics editor, recently published its
+version 1.0. This talk is the occasion to give an update to the LGM
+community about what has been going on in the Inkscape project lately,
+recall some history and recent evolution in the community, and outline
+some of the developments we'll try to undergo in the future.</p> 
       </td>
   </tr>
 
