add note about stream working best with firefox

--- a/en/live.html
+++ b/en/live.html
@@ -91,7 +91,7 @@
                         Your browser does not support the video tag.
                     </video>
                     <div class="col-md-12">
-                         <p class="mt-4">You can watch the video stream here, or in a video player application like VLC (Open Network Stream with the URL http://ice.wintermute.org:8000/lgm.webm).</p>
+                         <p class="mt-4">You can watch the video stream here with Firefox (it may not work with Chrome), or in a video player application like VLC (Open Network Stream with the URL http://ice.wintermute.org:8000/lgm.webm).</p>
                          <p class="mt-4">Reload the page or restart your player at the beginning of each presentation or workshop to access the new stream.</p>
                     </div>
                 </div>
