links to kiwirc channels

--- a/en/live.html
+++ b/en/live.html
@@ -81,8 +81,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2 class="text-center">Live</h2>
-                         <p class="mt-4">Please join the IRC channel #lgm-online on the Freenode server to interact with other participants. You can use your favorite IRC client, or the web client <a href="https://kiwiirc.com/client/irc.freenode.net" class="btn btn-cor2 btn-sm">KiwiIRC</a> (enter your Nick, the Channel #lgm-online and press the Start button).</p>
-                         <p class="mt-4">For workshops, please join the IRC channel #lgm-workshop if you want to participate.</p>
+                         <p class="mt-4">Please join the IRC channel <a href="https://kiwiirc.com/nextclient/#irc://irc.freenode.net/#lgm-online">#lgm-online</a> on the Freenode server to interact with other participants. You can use your favorite IRC client, or the web client <a href="https://kiwiirc.com/client/irc.freenode.net" class="btn btn-cor2 btn-sm">KiwiIRC</a> (click on the "channel" link, enter your Nick, and press the "Connect" button).</p>
+                         <p class="mt-4">For workshops, please join the IRC channel <a href="https://kiwiirc.com/nextclient/#irc://irc.freenode.net/#lgm-workshop">#lgm-workshop</a> if you want to participate.</p>
                     </div><!-- /row-->
                                             <!-- video player-->
                     <video width="640" height="360" controls style="margin: auto"  poster="../css/img/poster-stream.png">
