update live test kiwiirc

--- a/en/live.html
+++ b/en/live.html
@@ -94,6 +94,10 @@
                          <p class="mt-4">You can watch the video stream here with Firefox (it may not work with Chrome), or in a video player application like VLC (Open Network Stream with the URL http://ice.wintermute.org:8000/lgm.webm).</p>
                          <p class="mt-4">Reload the page or restart your player at the beginning of each presentation or workshop to access the new stream.</p>
                     </div>
+                  
+                  <div class="col-md-12">
+                    <iframe src="https://kiwiirc.com/client/chat.freenode.net/?nick=lgm_attend|?#lgm-online" style="border:0; width:100%; height:450px;"></iframe>
+                  </div>
                 </div>
               </div><!-- /container-->
           </section>
