--- a/en/live.html
+++ b/en/live.html
@@ -80,22 +80,20 @@
               <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">Live</h2>
-                         <p class="mt-4">Please join the IRC channel #lgm-online on the Freenode server to interact with other participants. You can use your favorite IRC client, or the web client <a href="https://kiwiirc.com/client/irc.freenode.net" class="btn btn-cor2 btn-sm">KiwiIRC</a> (enter your Nick, the Channel #lgm-online and press the Start button).</p>
-                         <p class="mt-4">For workshops, please join the IRC channel #lgm-workshop if you want to participate.</p>
-                    </div><!-- /row-->
-                                            <!-- video player-->
+                        <h1 class="text-center">Live</h1>                     
+                    </div><!-- /row-->                                            <!-- video player-->
                     <video width="640" height="360" controls style="margin: auto"  poster="../css/img/poster-stream.png">
-                      
                         <source src="http://ice.wintermute.org:8000/lgm.webm" type="video/webm">
                         Your browser does not support the video tag.
                     </video>
                     <div class="col-md-12">
                          <p class="mt-4">You can watch the video stream here with Firefox (it may not work with Chrome), or in a video player application like VLC (Open Network Stream with the URL http://ice.wintermute.org:8000/lgm.webm).</p>
                          <p class="mt-4">Reload the page or restart your player at the beginning of each presentation or workshop to access the new stream.</p>
-                    </div>
-                  
+                  </div>
                   <div class="col-md-12">
+                    <h2 class="text-center">Questions & Answers after each talk</h2>
+                    <p class="mt-4">Please join the IRC channel #lgm-online on the Freenode server to interact with other participants. You can use your favorite IRC client, or the web client <a href="https://kiwiirc.com/client/irc.freenode.net" class="btn btn-cor2 btn-sm">KiwiIRC</a> (enter your Nick, the Channel #lgm-online and press the Start button).</p>
+                    <p class="mt-4">For workshops, please join the IRC channel #lgm-workshop if you want to participate.</p>
                     <iframe src="https://kiwiirc.com/client/chat.freenode.net/?nick=lgm_attend|?#lgm-online" style="border:0; width:100%; height:450px;"></iframe>
                   </div>
                 </div>
