--- a/en/live.html
+++ b/en/live.html
@@ -92,8 +92,9 @@
                   </div>
                   <div class="col-md-12">
                     <h2 class="text-center">Questions & Answers after each talk</h2>
-                    <p class="mt-4">Please join the IRC channel #lgm-online on the Freenode server to interact with other participants. You can use your favorite IRC client, or the web client <a href="https://kiwiirc.com/client/irc.freenode.net" class="btn btn-cor2 btn-sm">KiwiIRC</a> (enter your Nick, the Channel #lgm-online and press the Start button).</p>
-                    <p class="mt-4">For workshops, please join the IRC channel #lgm-workshop if you want to participate.</p>
+                    <p class="mt-4">Please join the IRC channel <strong>#lgm-online</strong> on the Freenode server to interact with other participants. You can use your 
+                      favorite IRC client, or the web client <a href="https://kiwiirc.com/client/irc.freenode.net" class="btn btn-cor2 btn-sm">KiwiIRC</a> (enter your Nick, the Channel #lgm-online and press the Start button).
+                      For workshops, please join the IRC channel<strong> #lgm-workshop </strong>if you want to participate.</p>
                     <iframe src="https://kiwiirc.com/client/chat.freenode.net/?nick=lgm_attend|?#lgm-online" style="border:0; width:100%; height:450px;"></iframe>
                   </div>
                 </div>
