add calendar links for the program

--- a/en/program.html
+++ b/en/program.html
@@ -83,6 +83,8 @@
                         <h2 class="text-center">Program <small>(Paris time zone)</small></h2>
                       
                       <p>To learn how join the event, please go to <a href="live.html" class="btn btn-cor3 btn-lg"> Live page </a></p>
+                      </br>
+                      <p>You can get a <a href="https://www.dropbox.com/s/fybjok50sq7rbcp/LGM_2020.ics?dl=0">static calendar file</a> of the program, or a <a href="https://calendar.google.com/calendar?cid=dGhnbW9mbnFsaWNwYWVna2Y1cnVjbHByMjBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">google calendar</a>.</p>
 
                      
                     <!-- tableau -->
