--- a/en/live.html
+++ b/en/live.html
@@ -92,9 +92,9 @@
                   </div>
                   <div class="col-md-12">
                     <h2 class="text-center">Questions & Answers after each talk</h2>
-                    <p class="mt-4">Please join the IRC channel <strong>#lgm-online</strong> on the Freenode server to interact with other participants. You can use your 
+                    <p class="mt-4">Please join the IRC channel <strong><a href="https://kiwiirc.com/nextclient/#irc://irc.freenode.net/#lgm-online">#lgm-online</a> </strong> on the Freenode server to interact with other participants. You can use your 
                       favorite IRC client, or the web client at the bottom of this page (enter your Nick and press the Start button).
-                      For workshops, please join the IRC channel<strong> #lgm-workshop </strong>if you want to participate.</p>
+                      For workshops, please join the IRC channel<strong> <a href="https://kiwiirc.com/nextclient/#irc://irc.freenode.net/#lgm-workshop">#lgm-workshop</a></strong>if you want to participate.</p>
                     <iframe src="https://kiwiirc.com/client/chat.freenode.net/?nick=lgm_attend|?#lgm-online" style="border:0; width:100%; height:450px;"></iframe>
                   </div>
                 </div>
