update programme fr

--- a/fr/programme.html
+++ b/fr/programme.html
@@ -83,7 +83,7 @@
                     <div class="col-md-12">
                         <h2 class="text-center">Program <small>(Paris time zone)</small></h2>
                       
-                      <p>To learn how join the event, please go to <a href="live.html" class="btn btn-cor3 btn-lg"> Live page </a></p>
+                      <p>To learn how join the event, please go to <a href="../en/live.html" class="btn btn-cor3 btn-lg"> Live page </a></p>
 
                      
                     <!-- tableau -->
