change last on latest

--- a/en/program.html
+++ b/en/program.html
@@ -205,7 +205,7 @@ some of the developments we'll try to undergo in the future.</p>
        <h3 class="mt-4 mb-4">Retouching basics with GIMP</h3> 
        <h3>Aryeom and Jehan</h3>
       <p>We will show some basic techniques for retouching images with GIMP, with some emphasis on image restoration. This is a very short introduction to GIMP, based on courses given in University, which may not focus on tools only, but also on the workflow and the implications of retouching images. Questions will of course be welcome.</p>
-      <p>Prerequisites: please have the last version of GIMP ready if you wish to try together (otherwise you can just watch). A graphics tablet is also recommended though not mandatory. </p>
+      <p>Prerequisites: please have the latest version of GIMP ready if you wish to try together (otherwise you can just watch). A graphics tablet is also recommended though not mandatory. </p>
     </td>
 
     <td>
