--- a/en/program.html
+++ b/en/program.html
@@ -108,13 +108,6 @@
       <p>G'MIC is a full-featured open-source software framework for digital image processing. Its C++ library has been developed within the french CNRS research-center for more than 10 years. We will be showcasing a work in progress on plugging as many as its parametric graphics 500 filters through a new official C/Python binding for data-scientists, artists and amateurs, as well as a new Blender3d/Python/Nodes add-on using the binding.
         </p>
     </td>
-    
-    <td>  
-      <h5>PRESENTATION</h5>    
-      <h3 class="mt-4 mb-4"> Create asset for games with Inkscape 1.0 </h3>
-      <h3>Elisa de Castro Guerra, Cédric gémy</h3>
-       <p>Elisa will use Inkscape 1 to creat somes assets and Cedric will speak over to explain you the process !</p>
-    </td>
    
     <td>     
       <h5>WORKSHOP</h5>    
@@ -122,6 +115,13 @@
       <h3>Tristan Bunn</h3>
        <p>Processing Python Mode (or Processing.py) provides designers, artists, and any aspiring coders, with an accessible and visual way to learn Python programming. This presentation introduces the software, the creative coding scene, some inspiring projects, and a programming fundamentals course based on Processing.py. Additionally, I'll be sharing learning materials and a repository of code samples.</p>
       </td>
+    </td>
+  
+     <td>  
+      <h5>PRESENTATION</h5>    
+      <h3 class="mt-4 mb-4"> Create asset for games with Inkscape 1.0 </h3>
+      <h3>Elisa de Castro Guerra, Cédric Gémy</h3>
+       <p>Elisa will use Inkscape 1 to creat somes assets and Cedric will speak over to explain you the process !</p>
     </td>
   
   </tr>
