--- a/en/program.html
+++ b/en/program.html
@@ -119,9 +119,9 @@
   
      <td>  
       <h5>WORKSHOP</h5>    
-      <h3 class="mt-4 mb-4"> Create asset for games with Inkscape 1.0 </h3>
+      <h3 class="mt-4 mb-4"> Create assets for games with Inkscape 1.0 </h3>
       <h3>Elisa de Castro Guerra, Cédric Gémy</h3>
-       <p>Elisa will use Inkscape 1 to creat somes assets and Cedric will speak over to explain you the process !</p>
+       <p>Elisa will use Inkscape 1 to creat some assets and Cedric will talk to explain the process !</p>
     </td>
   
   </tr>
