--- a/en/live.html
+++ b/en/live.html
@@ -82,7 +82,7 @@
                     <div class="col-md-12">
                         <h1 class="text-center">Live</h1>                     
                     </div><!-- /row-->                                            <!-- video player-->
-                    <video width="640" height="360" controls style="margin: auto"  poster="../css/img/poster-deevad.png">
+                    <video width="640" height="360" controls style="margin: auto"  poster="../css/img/poster-revoy2.png">
                         <source src="http://ice.wintermute.org:8000/lgm.webm" type="video/webm">
                         Your browser does not support the video tag.
                     </video>
