--- a/en/live.html
+++ b/en/live.html
@@ -82,13 +82,11 @@
                     <div class="col-md-12">
                         <h1 class="text-center">Live</h1>                     
                     </div><!-- /row-->                                            <!-- video player-->
-                    <video width="640" height="360" controls style="margin: auto"  poster="../css/img/poster-joao.png">
-                        <source src="http://ice.wintermute.org:8000/lgm.webm" type="video/webm">
-                        Your browser does not support the video tag.
-                    </video>
+                  
                     <div class="col-md-12">
-                         <p class="mt-4">You can watch the video stream here with Firefox (it may not work with Chrome), or in a video player application like VLC (Open Network Stream with the URL http://ice.wintermute.org:8000/lgm.webm).</p>
-                         <p class="mt-4">Reload the page or restart your player at the beginning of each presentation or workshop to access the new stream.</p>
+                         <p class="mt-4">Thanks for all participant, it was a nice experience. We will post the link of all the online meeting as soon as possible.</p>
+                         <p class="mt-4">As each year we make a group photo of the last participant, thanks you !</p>
+                       <p class="mt-4"><img src="../css/img/groupPhoto-LGM2020-online-logo.png" alt="online meeting group"/></p>
                   </div>
                   <div class="col-md-12">
                     <h2 class="text-center">Questions & Answers after each talk</h2>
