--- a/en/live.html
+++ b/en/live.html
@@ -86,7 +86,7 @@
                     <div class="col-md-12">
                          <p class="mt-4">Thanks for all participant, it was a nice experience. We will post the link of all the online meeting as soon as possible.</p>
                          <p class="mt-4">As each year we make a group photo of the last participant, thanks you !</p>
-                       <p class="mt-4"><img src="../css/img/groupPhoto-LGM2020-online-logo.png" alt="online meeting group"/></p>
+                       <p class="mt-4"><img class="img-fluid" src="../css/img/groupPhoto-LGM2020-online-logo.png" alt="online meeting group"/></p>
                   </div>
                   <div class="col-md-12">
                     <h2 class="text-center">Questions & Answers after each talk</h2>
