close contact for spam

--- a/en/contact.html
+++ b/en/contact.html
@@ -92,6 +92,8 @@
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
                       <div class="row">
                         <div class="col-md-6">
+                          
+                          <!--
                             <form class="mt-4" action="../mailer.php" method="POST">
                                 <div class="form-group">
                                     <input type="text" name="first_name" id="first_name" placeholder="First Name" class="form-control">
@@ -107,11 +109,12 @@
                                 </div>
                                 <button class="btn btn-cor5 btn-block" type="submit">Submit</button>
                             </form>
-                        </div><!-- /col6 -->
+                        </div><!-- /col6 
                         <div class="col-md-6 mt-4">
                             <h3>Send us a message</h3>
                             <p>If you want to help us, become volunteer, sponsor, or need extra information, please send us a message.</p>
                         </div><!-- /col6 -->
+                          
                     </div><!-- /row -->
                   </article> 
               </div><!-- /row -->
