fermeture du form contact

--- a/fr/contact.html
+++ b/fr/contact.html
@@ -90,7 +90,7 @@
               <div class="row">
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
                       <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6"><!--
                             <form class="mt-4" action="../mailer.php" method="POST">
                                 <div class="form-group">
                                     <input type="text" name="first_name" id="first_name" placeholder="Prénom" class="form-control">
@@ -106,7 +106,7 @@
                                 </div>
                                 <button class="btn btn-cor5 btn-block disabled" type="submit">Envoyer</button>
                             </form>
-                        </div><!-- /col6 -->
+                        </div><!-- /col6 
                         <div class="col-md-6 mt-4">
                             <h3>Envoyez nous un message</h3>
                             <p>Si vous souhaitez nous aider bénévolement, nous proposer d'être sponsor de l'événement, ou avez besoin d'informations, envoyez-nous un message.</p>
