--- a/en/contact.html
+++ b/en/contact.html
@@ -92,7 +92,13 @@
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
                       <div class="row">
                         <div class="col-md-6">
-                          
+                          <h2>You want to contact the LGM team ?</h2>
+                          <p>2 ways to touch the LGM community :
+                            <ul>
+                              <li>Join the mailing list : <a href="https://lists.freedesktop.org/mailman/listinfo/libre-graphics-meeting">https://lists.freedesktop.org/mailman/listinfo/libre-graphics-meeting</a></li>
+                              <li>Join the irc Channel #LGM on freenode</li>
+                          </ul>
+                          </p>
                           <!--
                             <form class="mt-4" action="../mailer.php" method="POST">
                                 <div class="form-group">
