--- a/en/contact.html
+++ b/en/contact.html
@@ -92,7 +92,7 @@
                   <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
                       <div class="row">
                         <div class="col-md-12">
-                          <h2>You want to contact the LGM team ?</h2>
+                          <h2 class="text-center m-4">You want to contact the LGM team ?</h2>
                           <p>2 ways to touch the LGM community :
                             <ul>
                               <li>Join the mailing list : <a href="https://lists.freedesktop.org/mailman/listinfo/libre-graphics-meeting">https://lists.freedesktop.org/mailman/listinfo/libre-graphics-meeting</a></li>
