--- a/en/contact.html
+++ b/en/contact.html
@@ -89,13 +89,13 @@
           <section class="cor5">
             <div class="container">
               <div class="row">
-                  <article class="col-lg-8 offset-lg-2 col-md-12 cor1 pb-4">
+                  <article class="col-lg-10 offset-lg-1 col-md-12 cor1 pb-4">
                       <div class="row">
                         <div class="col-md-12">
                           <h2 class="text-center m-4">You want to contact the LGM team ?</h2>
                           <p>2 ways to touch the LGM community :
                             <ul>
-                              <li>Join the mailing list : <a href="https://lists.freedesktop.org/mailman/listinfo/libre-graphics-meeting">https://lists.freedesktop.org/mailman/listinfo/libre-graphics-meeting</a></li>
+                              <li>Join the mailing list : <a class="btn-cor3" href="https://lists.freedesktop.org/mailman/listinfo/libre-graphics-meeting">https://lists.freedesktop.org/mailman/listinfo/libre-graphics-meeting</a></li>
                               <li>Join the irc Channel #LGM on freenode</li>
                           </ul>
                           </p>
