--- a/en/program.html
+++ b/en/program.html
@@ -81,7 +81,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2 class="text-center">Program</h2>
-                      <p class="text-center">Watch all talks & workshop on <a class="linkcor3" href="https://www.youtube.com/playlist?list=PLe-w9p--aJKvIs3toDqF0m27rs8wR4W4Y">Youtube</a>
+                      <p class="text-center">Watch all talks & workshop on <a class="btn btn-cor3" href="https://www.youtube.com/playlist?list=PLe-w9p--aJKvIs3toDqF0m27rs8wR4W4Y">Youtube</a>
                         or on <a class="btn btn-cor3" href="https://conf.tube/video-channels/lgm_online_2020/videos">Peertube</a></p>
                      
                     <!-- tableau -->
