--- a/en/live.html
+++ b/en/live.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/lgm20.css" />
 
     <title>Libre Graphics Meeting 2020</title>
+    <meta http-equiv="Refresh" content="0; URL=https://libregraphicsmeeting.org/2020/en/program.html/">
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
